--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,10 @@
 .env
 static_data/swpe_local_tax_listing.xlsx
 static_data/swpe_sui_tax_listing.xlsx
+static_data/ADP - GTS .xlsx
+static_data/results.zip
+
+# Folders
+input_files/
+output_files/
+static_data/results/
