--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,10 @@ annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.12.1
 certifi==2026.1.4
+charset-normalizer==3.4.4
+click==8.3.1
 distro==1.9.0
+et_xmlfile==2.0.0
 fastapi==0.128.0
 h11==0.16.0
 httpcore==1.0.9
@@ -12,11 +15,15 @@ idna==3.11
 jiter==0.12.0
 numpy==2.4.1
 openai==2.15.0
+openpyxl==3.1.5
 pandas==2.3.3
 pydantic==2.12.5
 pydantic_core==2.41.5
 python-dateutil==2.9.0.post0
+python-dotenv==1.2.1
+python-multipart==0.0.21
 pytz==2025.2
+requests==2.32.5
 six==1.17.0
 sniffio==1.3.1
 starlette==0.50.0
@@ -24,3 +31,5 @@ tqdm==4.67.1
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 tzdata==2025.3
+urllib3==2.6.3
+uvicorn==0.40.0
